fix: fix z-index

--- a/styles/AccountHeader.module.scss
+++ b/styles/AccountHeader.module.scss
@@ -37,6 +37,7 @@
   height: 75px;
   justify-content: space-between;
   align-items: center;
+  z-index: 100;
 
   @media screen and (max-width: 991px) {
     z-index: 100;
