--- a/styles/AccountSidebar.module.scss
+++ b/styles/AccountSidebar.module.scss
@@ -9,7 +9,7 @@
   box-shadow: 0 8px 24px rgba(168, 180, 208, 0.1);
   transition: left 450ms ease, width 450ms ease;
   border-right: 1px solid #e9edf4;
-  z-index: 100;
+  z-index: 1000;
   overflow: hidden;
 
   &_mini {
